--- a/CHANGELOG
+++ b/CHANGELOG
@@ -112,3 +112,13 @@ Version 0.21, released August 21, 2012:
 Version 0.22, released October 11, 2012:
 	- Fix bugs in oclvanityminer bounty list parser
 	- Use GET instead of POST for work submission in oclvanityminer
+
+========================================
+
+Vanitygen_z
+
+Version 0.01, released November 13, 2016:
+	- Zcash t1 and t3 type addresses are now the sole objective.  
+	- OpenCL files have been removed for the time being.  
+	- Bug: Input strings beginning with 't' are required but impossible 
+	  input strings such as 'tabc' are accepted.  
